crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-no_vector_engine-no_text_engine-dataset-hybrid_single_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.01",
      "data": {
        "question": "A Mission Control Officer at Cape Canaveral makes the statement \"lift-off, T minus 50 seconds.\" How long is it before lift-off?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The statement \"T minus 50 seconds\" indicates that there are $\\boxed{50 \\text{ seconds}}$ remaining until lift-off."
        ]
      },
      "primary_key": {
        "id": 9
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
        ]
      },
      "primary_key": {
        "id": 525
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
